--- a/.github/workflows/CICD.yml
+++ b/.github/workflows/CICD.yml
@@ -25,7 +25,7 @@ jobs:
         run: chmod +x ./gradlew
 
       - name: Build with Gradle
-        run: ./gradlew clean build
+        run: ./gradlew clean build -x test
 
       - name: Login to DockerHub
         uses: docker/login-action@v1
