--- a/.github/workflows/CICD.yml
+++ b/.github/workflows/CICD.yml
@@ -34,10 +34,10 @@ jobs:
           password: ${{ secrets.DOCKERHUB_TOKEN }}
 
       - name: Build Docker Image
-        run: docker build --platform linux/amd64 -t ${{ secrets.DOCKERHUB_USERNAME }}/live-server .  
+        run: docker build --platform linux/amd64 -t ${{ secrets.DOCKERHUB_USERNAME }}/live_server .  
 
       - name: Push Docker Image
-        run: docker push ${{ secrets.DOCKERHUB_USERNAME }}/live-server:latest
+        run: docker push ${{ secrets.DOCKERHUB_USERNAME }}/live_server:latest
 
   deploy:
     needs: build
@@ -65,7 +65,16 @@ jobs:
             echo "error"
             exit 1
           fi
-          
+
+      - name: Create and decode application-secret on EC2
+        uses: appleboy/ssh-action@master
+        with:
+          username: ubuntu
+          host: ${{ secrets.LIVE_SERVER_IP }}
+          key: ${{ secrets.EC2_SSH_KEY }}
+          script: |
+            echo "${{ secrets.SECRET_YML_BASE64 }}" | base64 --decode > /path/to/application-secret.yml
+            
       - name: Docker compose
         uses: appleboy/ssh-action@master
         with:
