--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -15,6 +15,7 @@ spring:
   config:
     activate:
       on-profile: blue
+    additional-location: file:/home/ubuntu/application-secret.yml
 
 server:
   port: 8080
@@ -28,6 +29,7 @@ spring:
   config:
     activate:
       on-profile: green
+    additional-location: file:/home/ubuntu/application-secret.yml
 
 server:
   port: 8081
